erDiagram
    %% ==========================================
    %% 1. USERS & PROFILES
    %% ==========================================
    USERS {
        int id PK
        string email
        string role "ADMIN | SME | INVESTOR"
        string status
    }
    
    SME_PROFILES {
        int id PK
        int user_id FK
        string company_name
        string industry
        string stage
        int readiness_score
        string risk_level
    }
    
    INVESTOR_PROFILES {
        int id PK
        int user_id FK
        string organization_name
        string investor_type
        decimal min_ticket_size
        decimal max_ticket_size
    }

    USERS ||--o| SME_PROFILES : "has profile"
    USERS ||--o| INVESTOR_PROFILES : "has profile"

    %% ==========================================
    %% 2. ASSESSMENT ENGINE
    %% ==========================================
    TEMPLATES {
        int id PK
        string name
        string version
        string status
    }

    PILLARS {
        int id PK
        int template_id FK
        string name
        decimal weight
    }

    INDICATORS {
        int id PK
        int pillar_id FK
        string name
        decimal weight
    }

    QUESTIONS {
        int id PK
        int template_id FK
        int pillar_id FK
        string text
        string type
        decimal weight
    }

    TEMPLATES ||--|{ PILLARS : "contains"
    PILLARS ||--|{ INDICATORS : "contains"
    INDICATORS ||--|{ QUESTIONS : "contains"
    PILLARS ||--|{ QUESTIONS : "contains (optional direct link)"

    %% ==========================================
    %% 3. ASSESSMENTS & SCORING
    %% ==========================================
    ASSESSMENTS {
        int id PK
        int sme_id FK
        int template_id FK
        decimal total_score
        string status
        datetime completed_at
    }

    ASSESSMENT_RESPONSES {
        int id PK
        int assessment_id FK
        int question_id FK
        string answer_value
        decimal score_awarded
    }

    SME_PROFILES ||--|{ ASSESSMENTS : "takes"
    TEMPLATES ||--|{ ASSESSMENTS : "defines structure for"
    ASSESSMENTS ||--|{ ASSESSMENT_RESPONSES : "contains"
    QUESTIONS ||--|{ ASSESSMENT_RESPONSES : "answers"

    %% ==========================================
    %% 4. PROGRAMS & GOALS
    %% ==========================================
    PROGRAMS {
        int id PK
        string name
        int template_id FK "(Optional)"
        string status "Active | Draft"
        date start_date
        date end_date
    }

    PROGRAM_ENROLLMENTS {
        int id PK
        int program_id FK
        int sme_id FK
        string status
    }

    GOALS {
        int id PK
        int sme_id FK
        int pillar_id FK
        string title
        string priority
        string status
        int progress_percentage
    }

    PROGRAMS ||--|{ PROGRAM_ENROLLMENTS : "has members"
    SME_PROFILES ||--|{ PROGRAM_ENROLLMENTS : "enrolls in"
    SME_PROFILES ||--|{ GOALS : "sets"
    PILLARS ||--o{ GOALS : "targets specific pillar"

    %% ==========================================
    %% 5. INVESTOR TOOLS
    %% ==========================================
    INVESTOR_WATCHLIST {
        int id PK
        int investor_id FK
        int sme_id FK
        string notes
    }

    INVESTOR_PROFILES ||--|{ INVESTOR_WATCHLIST : "tracks"
    SME_PROFILES ||--|{ INVESTOR_WATCHLIST : "is tracked in"

    %% ==========================================
    %% 6. DOCUMENTS & VERIFICATION
    %% ==========================================
    DOCUMENTS {
        int id PK
        int sme_id FK
        string type
        string file_url
        string verification_status
    }

    VERIFICATION_REQUESTS {
        int id PK
        int sme_id FK
        int document_id FK
        string status
    }

    SME_PROFILES ||--|{ DOCUMENTS : "uploads"
    DOCUMENTS ||--o| VERIFICATION_REQUESTS : "requires"

    %% ==========================================
    %% 7. ADMIN & SYSTEM
    %% ==========================================
    NOTIFICATION_TEMPLATES {
        int id PK
        string name
        string type
        string trigger_event
        string subject
        string body
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    REPORT_LOGS {
        string id PK
        string type "PDF | CSV"
        string name 
        string company
        int sme_id FK "(Optional)"
        datetime created_at
    }
